@@ -1,3 +1,6 @@
+4 October, (Both Bracmat and Potu): Fixed an error in the computation of an expression's
+'complexity'. The (not serious) error sometimes caused indentation to go awry.
+
 18 September 2022
 Fixed bugs, so we can compute points in te Mandelbrot set.
 
